[package]
name = "kvs"
version = "0.1.0"
authors = ["Reto Hablützel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
structopt = "0.2"
failure = "0.1.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.1.0"
walkdir = "2.2.7"

[lib]
  test = false
