[package]
name = "kvs"
version = "0.1.0"
authors = ["Reto Hablützel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
structopt = "0.2"
failure = "0.1.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.1.0"
walkdir = "2.2.7"

[lib]
  test = false
